# triton_krackme

./: .gitignore  CMakeLists.txt  README.md  hooks.cpp  hooks.hpp  main.cpp  routines.cpp  routines.hpp  ttexplore.cpp  ttexplore.hpp  utils.cpp  utils.hpp
